// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overflow.SSR basic 1`] = `
<div
  class="rc-overflow"
>
  <div
    class="rc-overflow-item"
    style="opacity:1;order:0;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    Label 0
  </div>
  <div
    class="rc-overflow-item"
    style="opacity:1;order:1;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    Label 1
  </div>
  <div
    aria-hidden="true"
    class="rc-overflow-item rc-overflow-item-rest"
    style="opacity:0;height:0;overflow-y:hidden;order:9007199254740991;pointer-events:none;position:absolute;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    + 0 ...
  </div>
</div>
`;

exports[`Overflow.SSR with suffix 1`] = `
<div
  class="rc-overflow"
>
  <div
    class="rc-overflow-item"
    style="opacity:1;order:0;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    Label 0
  </div>
  <div
    class="rc-overflow-item"
    style="opacity:1;order:1;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    Label 1
  </div>
  <div
    aria-hidden="true"
    class="rc-overflow-item rc-overflow-item-rest"
    style="opacity:0;height:0;overflow-y:hidden;order:9007199254740991;pointer-events:none;position:absolute;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    + 0 ...
  </div>
  <div
    class="rc-overflow-item rc-overflow-item-suffix"
    style="opacity:1;order:9007199254740991;max-width:0;padding:0;margin:0;border-width:0;overflow-x:hidden"
  >
    <span>
      I am a suffix
    </span>
  </div>
</div>
`;
